; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/secur32/wine/extr_util.c_SECUR32_CreateNTLM1SessionKey.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/secur32/wine/extr_util.c_SECUR32_CreateNTLM1SessionKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"(%p, %p)\0A\00", align 1
@SEC_E_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SECUR32_CreateNTLM1SessionKey(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__, align 4
  %8 = alloca [16 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32* %9, i32* %10)
  %12 = call i32 @MD4Init(%struct.TYPE_5__* %7)
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @MD4Update(%struct.TYPE_5__* %7, i32* %13, i32 %14)
  %16 = call i32 @MD4Final(%struct.TYPE_5__* %7)
  %17 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @memcpy(i32* %17, i32 %19, i32 16)
  %21 = call i32 @MD4Init(%struct.TYPE_5__* %7)
  %22 = getelementptr inbounds [16 x i32], [16 x i32]* %8, i64 0, i64 0
  %23 = call i32 @MD4Update(%struct.TYPE_5__* %7, i32* %22, i32 16)
  %24 = call i32 @MD4Final(%struct.TYPE_5__* %7)
  %25 = load i32*, i32** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @memcpy(i32* %25, i32 %27, i32 16)
  %29 = load i32, i32* @SEC_E_OK, align 4
  ret i32 %29
}

declare dso_local i32 @TRACE(i8*, i32*, i32*) #1

declare dso_local i32 @MD4Init(%struct.TYPE_5__*) #1

declare dso_local i32 @MD4Update(%struct.TYPE_5__*, i32*, i32) #1

declare dso_local i32 @MD4Final(%struct.TYPE_5__*) #1

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
